gateway-api/backend.yml
# kubectl apply -f backend.yml
# sed 's/ngx/red/g'   backend.yml | kubectl apply -f -
# sed 's/ngx/green/g' backend.yml | kubectl apply -f -
# sed 's/ngx/blue/g'  backend.yml | kubectl apply -f -
# sed 's/ngx/black/g' backend.yml | kubectl apply -f -

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngx-dep
  labels:
    app: ngx-dep

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngx-dep

  template:
    metadata:
      labels:
        app: ngx-dep
    spec:
      volumes:
      - name: ngx-conf-vol
        configMap:
          name: ngx-conf

      containers:
      - image: nginx:alpine
        name: nginx
        ports:
        - containerPort: 80

        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: ngx-conf-vol

---

apiVersion: v1
kind: Service
metadata:
  name: ngx-svc

spec:
  selector:
    app: ngx-dep

  ports:
  - port: 80
    protocol: TCP
    targetPort: 80

---
