gateway-api/filters.yml

# curl -i $(minikube ip):32686 -H 'host: filter.test'

---

#  添加了响应头和限速
# curl -i $(minikube ip):32686 -H 'host: filter.test'
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ngx-filter-route

  annotations:
    konghq.com/plugins: |
        kong-rate-limiting-plugin

spec:
  parentRefs:
  - name: kong-gtw
  hostnames:
  - "filter.test"

  rules:

  - backendRefs:
    - name: black-svc
      port: 80

    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: A-New-Header
          value: k8s-gtw-api

---
